自动化注册路由渲染模板

--- a/resources/views/default/AdminUser/index.html
+++ b/resources/views/default/AdminUser/index.html
@@ -1,10 +1,10 @@
-{{ define "show/show"}}
+{{ define "AdminUser/index"}}
 
-    {{ template "header" }}
+    {{ template "header" . }}
 
     <section class="content">
 
-        12321321ahh
+        AdminUser/index
 
     </section>
 
