--- a/resources/views/default/_template/index.html
+++ b/resources/views/default/_template/index.html
@@ -1,10 +1,10 @@
-{{ define "show/show"}}
+{{ define "Index/index"}}
 
-    {{ template "header" }}
+    {{ template "header" . }}
 
     <section class="content">
 
-        12321321ahh
+        Index/index
 
     </section>
 
